# splunk-monitoring-use-cases

./: .cursorignore  .gitignore  .gitleaks.toml  .gitmodules  .lighthouserc.json  .link-check-ignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS-EXAMPLES.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEBASE-DIAGRAM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LEGAL.md  Makefile  README.md  ROADMAP.md  SECURITY.md  _cisco_chunk1.js  _cisco_chunk2.js  ai.txt  api-docs.html  build.py  build_app.sh  build_uitoolkit_app.sh  cisco-ui.html  clause-navigator.html  compliance-story.html  custom-text.js  data.js  docs-uc-map.js  docs.html  graph-data.json  graph.html  guide-reader.html  guide-reader.js  index-legacy.html  (+24 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
_legacy/: README.md  cat-meta-raw.js  cat-starters-raw.js  cim-enrichments.json  enrich_cim.py  index.html.bak  infrastructure-categories.md  use-case-dashboard.html  use-cases-enriched.md  use-cases-full.md
agent-notes/: handoff-prompt.md
api/: README.md
config/: uc_to_log_family.json
content/: INDEX.md  README.md
dashboards/: README.md  catalog-quick-start-top2.json  executive-health-dashboard.json
data/: auto-generated-docs.json  catalyst-center-domain-packs.json  doc-link-status.json  doc-regulation-mentions.json  doc-spl-mentions.json  doc-vendor-mentions.json  evidence-pack-extras.json  inline-citation-phrases.json  license-inventory.json  nis2-domain-packs.json  nis2-source-map.json  regulations-watch.json  regulations.draft.json  regulations.json  source-links-status.json  source-mappings.json  source-references.json  spl-anti-patterns.json  splunk-version-matrix.json  splunk-version-vocabulary.json  splunkbase-catalog-overrides.json  splunkbase-catalog.json  uc-link-fallbacks.json  uc-link-status.json
docs/: DESIGN.md  PITCH.md  alert-action-templates.md  api-docs-guide.md  api-versioning.md  architecture.md  backlinks.md  baselines-howto.md  build-artefacts-reference.md  capacity-and-staffing.md  catalog-schema.md  category-files-and-names.md  checkpoint-phase0.md  ci-architecture.md  cim-and-data-models.md  cim-models-inventory.md  clause-navigator-guide.md  codeowners-coverage.md  compliance-coverage.md  compliance-gaps.md  compliance-story-guide.md  content-gap-analysis.md  content-quality-audit.md  coverage-methodology.md  cursor-multi-account-setup.md  dashboard-templates.md  embedding.md  enterprise-deployment.md  equipment-table.md  evidence-signing.md  exclusions-coverage.md  external-consumer-matrix.md  f8-frontend-hardening-inventory.md  false-positive-process.md  feasibility-spike-results.md  gemini-recreation-prompt.md  github-pages-setup.md  gold-standard-authoring-playbook.md  gold-standard-template.md  grandma-explanations.md  (+63 more)
eventgen_data/: README.md  manifest-all.json  manifest-top10.json
imucl/: README.md
imucl_uitoolkit/: README.md  package-lock.json  package.json
mcp/: README.md  pyproject.toml  requirements-lock.txt
mcp/src/splunk_uc_mcp/: __init__.py  __main__.py  catalog.py  server.py
mcp/src/splunk_uc_mcp/resources/: __init__.py  uri_scheme.py
mcp/src/splunk_uc_mcp/tools/: __init__.py  compliance.py  equipment.py  regulation.py  search.py  use_case.py
mcp/tests/: conftest.py  test_catalog.py  test_server.py  test_tools_compliance.py  test_tools_equipment.py  test_tools_regulation.py  test_tools_search.py  test_tools_use_case.py  test_uri_scheme.py
plan/: quality-remediation-2026-04-18.md
public/: README.md
reports/: agent-handoff.md  attack-simulation.json  compliance-coverage.json  compliance-gaps.json  evidence-signatures-audit.json  external-links-todo.md  guide-external-links.json  lift-batch-cat-15-poc.json  mapping-ledger-audit.json  meraki-st-counts.json  meraki-sweep-report.json  meraki-triage-report.json  meraki-triage-report.md  oscal-roundtrip.json  perf-a11y.json  prerequisites-audit.json  quality-audit.json  regulatory-change-watch.json  roadmap-export.json  sandbox-validation.json
sample-data/: README.md  uc-22.2.1-fixture.json  uc-22.2.10-fixture.json  uc-22.2.11-fixture.json  uc-22.2.12-fixture.json  uc-22.2.13-fixture.json  uc-22.2.14-fixture.json  uc-22.2.15-fixture.json  uc-22.2.16-fixture.json  uc-22.2.17-fixture.json  uc-22.2.18-fixture.json  uc-22.2.19-fixture.json  uc-22.2.2-fixture.json  uc-22.2.20-fixture.json  uc-22.2.21-fixture.json  uc-22.2.22-fixture.json  uc-22.2.23-fixture.json  uc-22.2.24-fixture.json  uc-22.2.25-fixture.json  uc-22.2.26-fixture.json  uc-22.2.27-fixture.json  uc-22.2.28-fixture.json  uc-22.2.29-fixture.json  uc-22.2.3-fixture.json  uc-22.2.30-fixture.json  uc-22.2.31-fixture.json  uc-22.2.32-fixture.json  uc-22.2.33-fixture.json  uc-22.2.34-fixture.json  uc-22.2.35-fixture.json  uc-22.2.36-fixture.json  uc-22.2.37-fixture.json  uc-22.2.38-fixture.json  uc-22.2.39-fixture.json  uc-22.2.4-fixture.json  uc-22.2.40-fixture.json  uc-22.2.41-fixture.json  uc-22.2.42-fixture.json  uc-22.2.43-fixture.json  uc-22.2.44-fixture.json  (+58 more)
samples/: README.md
schemas/: baselines.schema.json  category.schema.json  coverage-baseline.schema.json  evidence-pack-extras.schema.json  legal-review-signoff.schema.json  license-inventory.schema.json  mapping-ledger.schema.json  peer-review-signoff.schema.json  per-regulation-phase3.2.schema.json  regulations-watch.schema.json  sme-review-signoff.schema.json  uc-profile-gold.json  uc.schema.json  vendor-changelog.schema.json
scripts/: README.md  _bootstrap_phase2_3_data.py  _catalog_lint.py  _catalog_st_audit.py  _catalog_st_fix.py  _catalog_sweep.py  _catalog_test_plan.py  _draft_uc_18_1_15.py  _fix_broken_fixture_refs.py  _gen_proxy_ucs.py  _meraki_fetch_field_manifests.py  _meraki_field_manifests.json  _meraki_fix.py  _meraki_inventory.py  _meraki_lint.py  _meraki_sweep.py  _meraki_test_plan.py  _meraki_triage.py  _patch_catalog_guide_fields.py  _regulation_wisdom.py  _wire_batch7.py  add_cisco_hw_models.py  assurance_gap_fix.py  audit_action_pins.py  audit_auto_gen_provenance.py  audit_build_reproducibility.py  (+164 more)
(+18260 files in other folders)
