# Project-level Python configuration
#
# Repo-overhaul plan §P4 (2026-05-08): single source of truth for package
# metadata, runtime dependencies, dev tooling configuration (ruff, mypy,
# pytest, coverage), and CLI entry-points across the build pipeline,
# audit suite, and content generators.
#
# The `splunk-uc-mcp` package keeps its own `mcp/pyproject.toml` because
# it ships to PyPI as a self-contained MCP server. Everything else
# (audits, generators, ingest, migrations, feasibility, tools) is
# packaged here as the `splunk-uc` distribution.
#
# Phase 6 closure (2026-05-11): `src/splunk_uc/` is now the SSOT for
# the 83-verb CLI dispatcher. The legacy `scripts/<name>.py` shims have
# been deleted; every caller invokes the dispatcher via
# `python3 -m splunk_uc <verb>` (or the `splunk-uc` console-script after
# `pip install -e .`). The build pipeline (`tools/build/`) stays in its
# own tree because it is not a CLI surface — it is consumed by
# `python3 tools/build/build.py --out dist` and by the wheel target
# below for the editable install.
#
# Install for development with::
#
#     pip install -e ".[audits,dev,test]"
#
# After install the `splunk-uc` console-script is on PATH and the
# legacy `PYTHONPATH=src python3 -m splunk_uc` invocation is no longer
# required (both forms continue to work).

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "splunk-uc"
description = "Splunk Monitoring Use Cases — curated, reproducible, machine-readable catalogue of 7,300+ IT and security monitoring use cases."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Splunk Monitoring Use Cases maintainers" },
]
requires-python = ">=3.11"
keywords = [
  "splunk",
  "monitoring",
  "compliance",
  "security",
  "detection-engineering",
  "use-cases",
  "ssot",
  "regulatory",
  "cim",
  "mitre",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]
dynamic = ["version"]

# Runtime dependencies are minimal — the build pipeline is stdlib-only
# by design (so a fresh CI runner can produce dist/ without `pip install`).
# Optional extras add what the audit suite, ingestion scripts, and dev
# tooling need.
dependencies = []

[project.optional-dependencies]

# Schema validation + ingestion utilities used by ~13 audit scripts and
# the regulatory ingest pipeline. Kept as an extra so the build pipeline
# itself stays stdlib-only.
audits = [
  "jsonschema>=4.21",
  "pyyaml>=6.0",
]

# Build-time helpers used by `make build` / `tools/build/build.py`.
# Today this is empty (stdlib-only build) but the extra exists so future
# additions are gated behind an explicit dependency choice.
build = []

# Test runners + coverage + property-based testing.
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "hypothesis>=6.100",
  "jsonschema>=4.21",
]

# Static analysis + formatting + type checking.
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0.12",
]

# Convenience meta-extra: install everything for full local development.
all = [
  "splunk-uc[audits,build,test,dev]",
]

[project.urls]
Homepage = "https://fenre.github.io/splunk-monitoring-use-cases/"
Repository = "https://github.com/fenre/splunk-monitoring-use-cases"
Issues = "https://github.com/fenre/splunk-monitoring-use-cases/issues"
Documentation = "https://github.com/fenre/splunk-monitoring-use-cases/blob/main/docs/architecture.md"
Changelog = "https://github.com/fenre/splunk-monitoring-use-cases/blob/main/CHANGELOG.md"

# -----------------------------------------------------------------------------
# Hatchling — version is read from VERSION (single source of truth).
# -----------------------------------------------------------------------------
[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)\\s*$"

# Phase 6 closure (2026-05-11): the wheel ships the ``splunk_uc``
# package as the canonical CLI surface. The package is fully self-
# contained — every audit / generator / ingest / migration / feasibility
# / tool verb is reachable through ``splunk-uc <verb>`` after
# ``pip install -e .`` (or via ``python -m splunk_uc <verb>``).
#
# ``tools/build/`` deliberately stays out of the wheel: it is the static-
# site build pipeline, not a CLI surface, and is invoked directly with
# ``python3 tools/build/build.py --out dist``. Bundling it would conflate
# two distinct contracts (catalogue tooling vs. site build) and force
# downstream `pip install splunk-uc` consumers to accept the build
# pipeline's evolving internal shape as part of the package's stable
# surface.
[tool.hatch.build.targets.wheel]
packages = ["src/splunk_uc"]
exclude = [
  "src/splunk_uc/__pycache__",
  "src/splunk_uc/**/__pycache__",
]

# Source distribution mirrors the repo layout so a ``pip install <sdist>``
# can rebuild from VERSION.
[tool.hatch.build.targets.sdist]
include = [
  "src/splunk_uc/**/*.py",
  "README.md",
  "VERSION",
  "LICENSE",
  "pyproject.toml",
  "schemas/**/*.json",
]

# -----------------------------------------------------------------------------
# Console-script entry point (Phase 6 Tier 4, 2026-05-11).
# -----------------------------------------------------------------------------
# After ``pip install -e .`` the ``splunk-uc`` command is on PATH and
# dispatches to the same CLI as ``python -m splunk_uc``. Both forms are
# guaranteed to work; CI keeps using ``python3 -m splunk_uc <verb>``
# because it does not require an editable install step.
[project.scripts]
splunk-uc = "splunk_uc.__main__:main"

# -----------------------------------------------------------------------------
# Pytest — single config across tests/ and mcp/tests/ for IDE & CI parity.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests", "mcp/tests"]
# We do NOT set ``pythonpath`` here on purpose: every test that needs
# the ``tools/build`` package or a ``scripts/`` module already sets it
# up locally with ``sys.path.insert(0, ...)`` to keep imports explicit.
# Adding pytest-managed pythonpath entries here would let an early-
# imported ``build.py`` (the legacy script at the repo root) shadow the
# ``tools/build/`` package via ``sys.modules`` caching, breaking every
# downstream ``from build import parse_content`` call. Once the legacy
# ``build.py`` is deleted in P1 step 5b, this comment becomes obsolete
# and we can hoist ``pythonpath = ["tools", "scripts", "mcp/src"]``
# back here for IDE convenience.
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:mcp.*",
  # Some third-party libraries still use deprecated stdlib APIs on
  # Python 3.13/3.14; quiet them per-package below.
  "ignore::DeprecationWarning:respx.*",
]
addopts = [
  "-ra",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "slow: marks tests as slow (>5s); deselect via `-m 'not slow'`",
  "network: marks tests that hit the network (deselected by default in CI)",
]

# -----------------------------------------------------------------------------
# Ruff — formatter + linter. Keeps the repo readable as the pipeline grows.
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "dist",
  "build",  # legacy directory name
  "use-cases",  # generated markdown
  "data.js",
  "ta",  # generated Splunk apps
  "splunk-apps",  # generated Splunk apps
  "vendor",
  "templates/replication-starter",
]

[tool.ruff.lint]
# Conservative selector: enable proven-useful rule sets. Tighten in a
# follow-up PR after the existing lint debt is paid down.
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # isort import sorting
  "B",     # flake8-bugbear (likely-bugs)
  "UP",    # pyupgrade
  "C4",    # flake8-comprehensions
  "PIE",   # flake8-pie (misc lint)
  "RUF",   # ruff-native rules
]
# Pre-existing waivers — to be burned down in a focused lint-cleanup PR.
ignore = [
  "E501",   # line-too-long (we have 100-char target but 100s of tests are wider)
  "B008",   # function call in argument default (idiomatic in argparse defaults here)
  "RUF012", # mutable class default (overzealous for legacy code)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "F401"]  # pytest patterns
"scripts/**/*.py" = ["E402"]         # post-sys.path imports are intentional
"src/splunk_uc/**/*.py" = ["E402"]   # post-sys.path imports are intentional
"tools/build/build.py" = ["E402"]    # post-sys.path imports are intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 88

# -----------------------------------------------------------------------------
# Mypy — type checking. Starting strict-but-scoped: only the new tools/build/
# tree is type-clean today; the legacy `build.py` and audit scripts have a
# type-debt backlog tracked in P4 step 2 (typed UseCase / Catalog models).
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
files = [
  "src/splunk_uc",
  "tools/build",
  "scripts",
  "tests",
]
exclude = []

# Per-module strictness gradient. Tighten as P4 step 2 lands typed models.
[[tool.mypy.overrides]]
module = "tools.build.parse_content"
disallow_untyped_defs = false  # legacy migration debt; tracked in P4 step 2

[[tool.mypy.overrides]]
module = "tools.build.enrichment"
disallow_untyped_defs = false

# tools.build.models is the typed-data-model SSOT introduced in P4 step 2
# and is fully type-clean. Pin strict mode here so any future drift —
# missing annotations, untyped helpers, implicit Any escapes — fails CI
# immediately rather than silently degrading the model. The schema-parity
# gate in tests/build/test_typed_models.py catches drift between the
# TypedDicts and the JSON Schemas; mypy-strict here catches drift in the
# TypedDict source itself.
[[tool.mypy.overrides]]
module = "tools.build.models"
strict = true
disallow_untyped_defs = true
disallow_any_explicit = false   # `Any` is a legitimate escape hatch in obligationModel
warn_return_any = true

# splunk_uc.* — the entire package is the P4 type-debt-burndown floor.
# Surveyed 2026-05-13 (canaries #1 audits, #2 generators, #3 ingest):
# every module under ``src/splunk_uc/`` passes ``mypy --strict`` at HEAD —
# 94 source files total, ~25 kLOC, zero errors. Subpackage roll-up:
#
#   splunk_uc.audits.*         51 modules   (#1 canary, 2026-05-13)
#   splunk_uc.generators.*     17 modules   (#2 canary, 2026-05-13)
#   splunk_uc.ingest.*          8 modules   (#3 canary, 2026-05-13)
#   splunk_uc.feasibility.*     5 modules
#   splunk_uc.migrations.*      4 modules
#   splunk_uc.tools.*           6 modules
#   splunk_uc top-level         3 modules   (__init__, __main__, _registry)
#
# The package-wide override below replaces the previous per-canary
# overrides (``splunk_uc.audits.*`` and ``splunk_uc.generators.*``)
# with a single contract that pins the strict bar for the whole namespace.
# Any new module or refactor that introduces an untyped def, an
# implicit Any, or an un-parameterised generic anywhere under
# ``src/splunk_uc/`` fails CI immediately.
[[tool.mypy.overrides]]
module = "splunk_uc.*"
strict = true
disallow_untyped_defs = true
warn_return_any = true

# -----------------------------------------------------------------------------
# Coverage — used by P16 coverage burndown. Baselines committed under
# data/baselines/coverage-v7.4.2.json once captured.
# -----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/splunk_uc", "tools/build", "scripts", "mcp/src"]
omit = [
  "tests/*",
  "mcp/tests/*",
  "tools/build/migrate_*.py",
  "tools/build/generate_*.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
