[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-uc-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing the Splunk Monitoring Use Case catalogue (6,424 UCs, 60 regulations, 105 equipment slugs, signed provenance ledger) to LLM agents."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Splunk Monitoring Use Cases maintainers" },
]
requires-python = ">=3.11"
keywords = [
  "mcp",
  "model-context-protocol",
  "splunk",
  "compliance",
  "security",
  "detection-engineering",
  "use-cases",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]

dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27",
  "anyio>=4.5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "jsonschema>=4.23",
]

[project.scripts]
splunk-uc-mcp = "splunk_uc_mcp.__main__:main"

[project.urls]
Homepage = "https://fenre.github.io/splunk-monitoring-use-cases/"
Repository = "https://github.com/fenre/splunk-monitoring-use-cases"
Issues = "https://github.com/fenre/splunk-monitoring-use-cases/issues"
Documentation = "https://github.com/fenre/splunk-monitoring-use-cases/blob/main/docs/mcp-server.md"

[tool.hatch.build.targets.wheel]
packages = ["src/splunk_uc_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "src/splunk_uc_mcp",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:mcp.*",
]
